kustomize/overlays/staging/lab/jic/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jic
  labels:
    app: jic
    stage: staging
spec:
  selector:
    matchLabels:
      app: jic
      stage: staging
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
      labels:
        app: jic
        stage: staging
    spec:
      containers:
        - name: jic
          command: ["/bin/sh"]
          args:
            [
              "-c",
              "gunicorn --bind 0.0.0.0:8000 --workers=1 --max-requests 1000 -- service.wsgi:app",
            ]
          volumeMounts:
            - name: jic-ckpt-vol
              mountPath: /image_feature_extractor.onnx
              subPath: image_feature_extractor.onnx
            - name: jic-ckpt-vol
              mountPath: /captioning_model.pth
              subPath: captioning_model.pth
