kustomize/overlays/staging/lab/jic/service_patch.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: jic-svc
spec: 
  selector: 
    app: jic
    stage: staging
